bench-4235: Update Hints api to accept filter param (#1035)